--- a/about/index.html
+++ b/about/index.html
@@ -10,12 +10,10 @@ title: "#KarthikB"
 <h2 id="caption">Karthik B</h2>
 </div>
 <br />
-<div class="col-10 offset-2 about center">	
+<div class="col-10 offset-2 about center">
 <p>
-I am an Electronics Undergraduate at SRM Easwari Engineering College, with a passion for Programming. I'm inclined towards working with Embedded Systems, Internet of Things and Application Development. My programming skill-set includes C, C++, Python while my web-development tools include HTML,CSS and Bootstrap Framework. I've also worked with Github Version Control, have debugged with Valgrind and GDB. 
-</p>
-<p>
-Currently, I'm working on implementation of Machine Learning algorithms and applying them. My further interests include mastering Tensor Flow, working with ROS.
+I am a Software Engineer with Visteon Corporation, starting my career with them in August of 2017. I am a validation engineer for Jaguar & Land Rover Cluster Panel Programs, with exposure to CAN, LIN and Ethernet protocols  finding 40 defects so far in a near stable software. I have tested complex features including seatbelt, Diagnostics/UDS,Passenger airbag, Terrain response, ADAS and I have been recognised in my organization for my performance with a Silver Award recently. I am aware of ASPICE process and have been exposed to a  Agile methodology.
+More on me - I am an Electronics Undergraduate at SRM Easwari Engineering College, with a passion for Programming. I'm inclined towards working with Embedded Systems, Internet of Things and Application Development. My programming skill-set includes C, C++, Python while my web-development tools include HTML,CSS and Bootstrap Framework. I've also worked with Github Version Control, have debugged with Valgrind and GDB.
 </p>
 
 <p>
