--- a/_posts/2017-11-23-Diving-into-UDS.html
+++ b/_posts/2017-11-23-Diving-into-UDS.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Diving into UDS - Diagnostics! "
+title: "An Insight into UDS - Diagnostics! "
 date: 2017-11-23
 category: projects
 ---
@@ -94,7 +94,7 @@ category: projects
         Minimum time before which server has to send a response.<br>
         If it is unable to send response, it has to send NRC-78 - request received response pending<br>
         Then it has to send response within maximum time of 0x01ff - P2 extended performance timer.(5000ms)<br>
-        
+
 
         <b>For negative response - 7f precedes the service followed by reason(Negative Response code -NRC)</b><br>
         (while vehicle speed is given) 02 10 03 <br>
