--- a/_posts/2017-11-25-DTCs.html
+++ b/_posts/2017-11-25-DTCs.html
@@ -78,14 +78,14 @@ category: projects
 			23 02 FF DD 04 FF DD 05 <br>
 			24 FF DD 06 FF 61 B7 DD <br>
 			25 04 00 00 00 00 00 00 <br>
-			07 snapshots are reported above.
-			DD00 - FF FF FF FF - Global Real time
-			DD01 - FF FF FF - Total distance
-			DD02 - FF - Voltage supply
-			DD04 - FF - In Car temperature
-			DD05 - FF - Outdoor Temperature
-			DD06 - FF - Powermode
-			61B7 - DD 04 (Unsure)
+			07 snapshots are reported above. <br>
+			DD00 - FF FF FF FF - Global Real time <br>
+			DD01 - FF FF FF - Total distance <br>
+			DD02 - FF - Voltage supply <br>
+			DD04 - FF - In Car temperature <br>
+			DD05 - FF - Outdoor Temperature <br>
+			DD06 - FF - Powermode <br>
+			61B7 - DD 04 (Unsure) <br>
 		</p>
 
       <li>06- Report extended snapshot of DTC</li>
