--- a/_posts/2018-01-10-NM.html
+++ b/_posts/2018-01-10-NM.html
@@ -25,20 +25,21 @@ category: projects
 		<li>Types of NM</li>
     <p>There are two kinds of NM implementations:</p>
 			<ol>
-				<li>OSEK NM implementation</li> <br>
-				<li>AutoSAR NM implementation</li> <br>
+				<li>OSEK NM implementation</li>
+				<li>AutoSAR NM implementation</li>
 			</ol>
 		<p>
-			Side-Note: OSEK and AutoSAR are two kinds of standards/Architectures.
-			OSEK - Open systems and their interfaces for electronics in Motor vehciles
-			AutoSAR - Automotive Open System Architecture
+			Side-Note: OSEK and AutoSAR are two kinds of standards/Architectures.<br>
+			OSEK - Open systems and their interfaces for electronics in Motor vehciles <br>
+
+			AutoSAR - Automotive Open System Architecture <br>
 		</p>
 
 		<li>OSEK NM implementation</li>
 		<p>OSEK uses a token based strategy for NM implementation.
-			OSEK NM has a ring network strategy where-in all NM nodes are taken to be part of a ring.
-			NM messages in OSEK fall in fixed identifier range 500 - 57F.
-			NM messages are basically CAN messages whose data is interpreted and implemented in a certain manner.
+			OSEK NM has a ring network strategy where-in all NM nodes are taken to be part of a ring.<br>
+			NM messages in OSEK fall in fixed identifier range 500 - 57F.<br>
+			NM messages are basically CAN messages whose data is interpreted and implemented in a certain manner.<br>
 		</p>
 
 		<li>States of OSEK NM</li>
@@ -67,7 +68,7 @@ category: projects
 					It contains address of logical successor in the ring here. In case node is in Alive Mode or in Limphome mode , it will have the station's own address here.
 				</li>
 				<li>Byte-2: It contains Network state information.</li>
-					<ol>
+					<ul>
 						<li>Bit 0 - Alive State</li>
 						<li>Bit 1 - Ring State</li>
 						<li>Bit 2 - Limphome state</li>
@@ -76,7 +77,7 @@ category: projects
 						<li>Bit 5 - Sleep acknowledgement State</li>
 						<li>Bit 6 - Reserved</li>
 						<li>Bit 7 - Reserved</li>
-					</ol>
+					</ul>
 
 			<li>Byte-3: Reason for wake up is listed in this byte. Data is interpreted as follows</li>
 				<ul>
@@ -104,7 +105,7 @@ category: projects
 		0x512 - 11 12 <br>
 
 		0x511 - 12 12 <br>
-		0x512 - 11 32 <br> ( Sleep ack bit is set for last node to sleep once sleep mode is about to be entered)
+		0x512 - 11 32  ( Sleep ack bit is set for last node to sleep once sleep mode is about to be entered)<br>
 
 		<p>
 			NOTE: Images taken from  Thamim Ansari's presenation(Thanks!!), Reproduced here for understanding purposes.
