--- a/_posts/2018-02-21-CAPL.html
+++ b/_posts/2018-02-21-CAPL.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "The 6 CAPL Functions you should know about"
+title: "The 7 CAPL Events you should know about"
 date: 2018-02-21
 category: projects
 ---
