--- a/_posts/2018-04-11-Prereq-Cybersec.html
+++ b/_posts/2018-04-11-Prereq-Cybersec.html
@@ -1,15 +1,15 @@
 ---
 layout: post
-title: "The Pre-requistes to Cybersecurity"
+title: "The Pre-requistes to Cybersecurity - Insight into Linux"
 date: 2018-04-11
 category: projects
 ---
 <div class="article">
 	<p>
 		So Cybersecurity... This field is all about finding exploitable areas in code and closing it off before the bad guys exploit the vulnerablities.
-		For Cybersecurity validation,you must first know how to spot exploits and vulnerablities in a Code that will provide a way to get in and also how to get in and exploit a system.
+		For Cybersecurity testing,you must first know how to spot exploits and vulnerablities in a Code that will provide a way to get in and also how to get in and exploit a system.
 		Exploiting can be anything from accessing data you shouldn't access, breach privileges, control stuff etc.,
-		I'll try to share some resources that will actually help you when you try to do that.
+		I'll try to share some resources that will see how we can do that. First, some Insight into Linux, commandlines will help.
 		This will take a peek at Linux OS, Linux filesystem,permissions,commands, endianness <br>
 	</p>
 
@@ -18,25 +18,26 @@ category: projects
 		<p>
 			What is an OS? <br>
 			OS is basically a software that helps to make,execute and work with other programs. <br>
-			GNU/Linux or Linux is one such software. It has supportive programs like text editors, compiler (most are by GNU) etc in addition to the kernel(Linux) <br>
+			GNU/Linux or Linux as it is called nowadays is one such operating system. It has supportive programs like text editors, compiler (most are by GNU) etc in addition to the kernel(Linux) <br>
 			Kernel is responsible for dividing the memory and system resources among various processes.<br>
+			Examples for Linux distributions is Ubuntu, Kali Linux etc <br>
 		</p>
 		<li>Linux Filesystem</li>
-		<p>First about - Linux Filesystem
-			Linux has a single root filesystem. There is a root directory - "/" and the entire system is attached as branches to this root.
-			Every directory is there for a specific purpose to store files. </p>
+		<p>First lets see about - Linux Filesystem
+			Linux has a single root filesystem. There is a root directory/folder - "/" and the entire system is attached as branches to this root.
+			Every directory is there for a specific purpose to store files of some specific nature. </p>
 			<ol>
-			<li>/home - for user files</li><br>
-			<li>/etc - for system configuration files</li><br>
-			<li>/bin - Binary files that execute programs</li><br>
-			<li>/dev - Device driver files</li><br>
-			<li>/usr - User program binary files shared by mutliple users - getting obsolete</li><br>
-			<li>/mnt - Mountable media </li><br>
-			<li>/boot - Has files to boot the Filesystem</li><br>
-			<li>/tmp - temporary files</li><br>
-			<li>/var - variable length or temp files that keep changing </li><br>
+			<li>/home - for user files</li>
+			<li>/etc - for system configuration files</li>
+			<li>/bin - Binary files that execute programs</li>
+			<li>/dev - Device driver files</li>
+			<li>/usr - User program binary files shared by mutliple users - getting obsolete</li>
+			<li>/mnt and /media- Mountable media </li>
+			<li>/boot - Has files to boot the Filesystem</li>
+			<li>/tmp - temporary files</li>
+			<li>/var - variable length or temp files that keep changing </li>
 			 </ol>
-		For example , When you insert a CDROM/ Pen drive , its filesystem is attached/mounted to existing root, say under /media/user/CD_Name or /media/
+		For example , When you insert a CDROM/ Pen drive , its filesystem is attached/mounted to existing root, say under /media/user/CD_Name or /media/user/Pendrive
 
 
 		<li>Linux Permission System</li>
@@ -87,17 +88,17 @@ $ is called shell prompt - indicates waiting for user command input <br>
 By default, a shell generally starts at /home/user directory, represented by a ~(tilde)<br>
 Here are some basic linux commands below.
 <ol>
-	<li>grep - search for a pattern</li><br>
-	<li>ls - list contents of directory</li><br>
-	<li>cd - change current working directory</li><br>
-	<li>pwd - prints path of current working directory</li><br>
-	<li>cat - show contents of file on screen</li><br>
-	<li>rm - remove a file/directory</li><br>
-	<li>cp - copy a file/directory</li><br>
-	<li>logout - logs out of current session</li><br>
-	<li>poweroff/shutdown -h now - shuts down PC</li><br>
-	<li>reboot - reboots PC</li><br>
-	<li>passwd - Changes current password</li><br>
+	<li>grep - search for a pattern</li>
+	<li>ls - list contents of directory</li>
+	<li>cd - change current working directory</li>
+	<li>pwd - prints path of current working directory</li>
+	<li>cat - show contents of file on screen</li>
+	<li>rm - remove a file/directory</li>
+	<li>cp - copy a file/directory</li>
+	<li>logout - logs out of current session</li>
+	<li>poweroff/shutdown -h now - shuts down PC</li>
+	<li>reboot - reboots PC</li>
+	<li>passwd - Changes current password</li>
 </ol>
 		<li>Endianness</li>
     <p>
