--- a/_posts/2018-04-11-Prereq-Cybersec.html
+++ b/_posts/2018-04-11-Prereq-Cybersec.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "The Pre-requistes to Cybersecurity - Insight into Linux"
+title: "The Pre-requistes to Cybersecurity - An Insight into Linux"
 date: 2018-04-11
 category: projects
 ---
@@ -37,7 +37,7 @@ category: projects
 			<li>/tmp - temporary files</li>
 			<li>/var - variable length or temp files that keep changing </li>
 			 </ol>
-		For example , When you insert a CDROM/ Pen drive , its filesystem is attached/mounted to existing root, say under /media/user/CD_Name or /media/user/Pendrive
+		For example , When you insert a CDROM/ Pen drive , its filesystem is attached/mounted to existing root, say under /media/user/CD_Name or /media/user/Pendrive <br>
 
 
 		<li>Linux Permission System</li>
