--- a/_posts/2018-05-23-Cybersecurity-Narnia0.html
+++ b/_posts/2018-05-23-Cybersecurity-Narnia0.html
@@ -69,7 +69,7 @@ category: projects
       So It is a Little Endian system.
       <li>Our goal now is to overflow buf with value to overwrite "val" value as "0xde 0xad 0xbe 0xef" and give a command to print password of narnia1</li>
       <li>Write  a python shell command to send the characters to the file, including another command to print password from the shell.</li>
-      <img src="/static/images/projects/p9/i4.png" class="image-center image-bigger" />
+      <img src="/static/images/projects/p9/i4.png" class="image-center image-biggest" />
       <li>The Password for next level is printed.</li>
     </ol>
 
