--- a/_posts/2018-05-23-Cybersecurity-Narnia0.html
+++ b/_posts/2018-05-23-Cybersecurity-Narnia0.html
@@ -9,7 +9,7 @@ category: projects
   The variables are stored in a stack, one location above another. For example in the following code:
   <pre class="prettyprint">
     <code>
-      #include<stdio.h>
+      #include\<stdio.h\>
       int main()
       {
         int x;
