--- a/_posts/2018-06-14-Cybersecurity-GDB.html
+++ b/_posts/2018-06-14-Cybersecurity-GDB.html
@@ -11,7 +11,7 @@ category: projects
 
   <pre class="prettyprint">
     <code>
-      #include/<stdio.h/>
+      #include&lt;stdio.h&gt;
       int main()
       {
         char b[3];
