--- a/_posts/2018-08-17-Cybersecurity-Narnia3.html
+++ b/_posts/2018-08-17-Cybersecurity-Narnia3.html
@@ -61,6 +61,7 @@ category: projects
           cd /tmp
           mkdir –p /abcdefghi/aaaaaaaaaaaaaaaaa/tmp/abcdefghi/
           touch /tmp/abcdefghi/a
+          chmod 0666 /tmp/abcdefghi/a
           ln –s /etc/narnia_pass/narnia3 /tmp/abcdefghi/aaaaaaaaaaaaaaaaa/tmp/abcdefghi/a
       </code>
       </pre>
