--- a/_posts/2018-09-22-Cybersecurity-Narnia4.html
+++ b/_posts/2018-09-22-Cybersecurity-Narnia4.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Bigger Buffer Overflow - Brute Forcing into privileges"
+title: "Buffer Overflow again - Brute Forcing your way in!"
 date: 2018-09-22
 category: projects
 ---
