--- a/_posts/2018-12-14-Cybersecurity-Narnia7.html
+++ b/_posts/2018-12-14-Cybersecurity-Narnia7.html
@@ -85,8 +85,8 @@ category: projects
       This is a more precise way to write into memory location by splitting the data to be written into 2 bytes - Higher order and lower order.
       This also works on systems that don't support writing Bigger amount of memory directly.
       So we simply write it separately twice limiting maximum length to 2 bytes each time and maximum data written to a max of 65535.
-      Otherwise this modulus operandi is similar to what we did in Narnia Level 5.
-      Do checkout this link <a href="https://www.cgsecurity.org/Articles/SecProg/Art4/"><b> here</b></a>
+      Otherwise this modus operandi is similar to what we did in Narnia Level 5.
+      For a more in depth explanation, Do checkout this link <a href="https://www.cgsecurity.org/Articles/SecProg/Art4/"><b> here</b></a>
 
     </p>
 
