--- a/about/index.html
+++ b/about/index.html
@@ -7,12 +7,12 @@ title: "#KarthikB"
 <img src="/static/images/profile.jpg" class="profile" />
 </div>
 <div class="col-12">
-<h2 id="caption">Karthik B</h2>
+<h2 id="caption">Karthik Balu</h2>
 </div>
 <br />
 <div class="col-10 offset-2 about center">
 <p>
-I am a Software Engineer with Visteon Corporation, starting my career with them in August of 2017. I am a validation engineer for Jaguar & Land Rover Cluster Panel Programs, with exposure to CAN, LIN and Ethernet protocols  finding 40 defects so far in a near stable software. I have tested complex features including seatbelt, Diagnostics/UDS,Passenger airbag, Terrain response, ADAS and I have been recognised in my organization for my performance with a Silver Award recently. I am aware of ASPICE process and have been exposed to a  Agile methodology.
+I am a Software Validation Engineer in the Automotive Industry. My career path has two stops so far - my first was at Visteon Corporation for 1 year and 9 months. I worked in Jaguar and Land Rover Instrument Panel clusters there. I was exposed to Agile Philosophy here and contributed to the team achieving ASPICE L3 recognition and was rewarded with a Silver Award for Performance. My current pitsop is at Mercedes-Benz R&D India, where I'm here as a third-party consultant through Wafer Space Semiconductors. I work on ESP-LRG functionalities, focussing on Autonomous Driving in Specific Environments(ADSE). <br />
 More on me - I am an Electronics Undergraduate at SRM Easwari Engineering College, with a passion for Programming. I'm inclined towards working with Embedded Systems, Internet of Things and Application Development. My programming skill-set includes C, C++, Python while my web-development tools include HTML,CSS and Bootstrap Framework. I've also worked with Github Version Control, have debugged with Valgrind and GDB.
 </p>
 
@@ -20,7 +20,6 @@ More on me - I am an Electronics Undergraduate at SRM Easwari Engineering Colleg
 In my free time, I am an avid reader, traveller/trekker, foodie and social volunteer. My dedication and discipline are my key qualities as is my persistence. I am a team player with proven experience in working as a team to tackle problems in various instances during my education/internships. I always strive to learn new things and keep progressing. I'm an optimist, greatly influenced by Ayn Rand's writing.
 </p>
 
-<p>Download my resume by clicking &nbsp;<a id="here" href="/static/resume.pdf">here</a></p>
 </div>
 
 
