--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,9 @@ title: "#KarthikB"
 <br />
 <div class="col-10 offset-2 about center">
 <p>
-I am a Software Validation Engineer in the Automotive Industry. My career path has two stops so far - my first was at Visteon Corporation for 1 year and 9 months. I worked in Jaguar and Land Rover Instrument Panel clusters there. I was exposed to Agile Philosophy here and contributed to the team achieving ASPICE L3 recognition and was rewarded with a Silver Award for Performance. My current pitsop is at Mercedes-Benz R&D India, where I'm here as a third-party consultant through Wafer Space Semiconductors. I work on ESP-LRG functionalities, focussing on Autonomous Driving in Specific Environments(ADSE). <br />
+I am a Software Validation Engineer in the Automotive Industry.<br /> 
+My career path has two pitstops so far - my first was at Visteon Corporation for 1 year and 9 months. I worked in Jaguar and Land Rover Instrument Panel clusters there. I was exposed to Agile Philosophy here and contributed to the team in achieving ASPICE L3 recognition and was rewarded with a Silver Award for Performance as well. <br /> 
+My current pitsop is at Mercedes-Benz R&D India, where I'm here as a third-party consultant through Wafer Space Semiconductors. I work on ESP-LRG functionalities, focussing on Autonomous Driving in Specific Environments(ADSE). <br />
 More on me - I am an Electronics Undergraduate at SRM Easwari Engineering College, with a passion for Programming. I'm inclined towards working with Embedded Systems, Internet of Things and Application Development. My programming skill-set includes C, C++, Python while my web-development tools include HTML,CSS and Bootstrap Framework. I've also worked with Github Version Control, have debugged with Valgrind and GDB.
 </p>
 
